--- a/templates/findMembers.html
+++ b/templates/findMembers.html
@@ -6,8 +6,22 @@
     <title>Find Members</title>
     <link rel="stylesheet" href="../styles/materialize.min.css">
     <link rel="stylesheet" href="../styles/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/css-doodle/0.2.3/css-doodle.min.js"></script>
 </head>
 <body>
+    <css-doodle>
+        :doodle {
+        @grid: 20 / 100vmax;
+        background: #12152f;
+        }
+        :after {
+        content: '\@hex(@rand(0x2500, 0x257f))';
+        font-size: 5vmax;
+        color: hsla(
+        @rand(360), 70%, 70%, @rand(.9)
+        );
+        }
+    </css-doodle>
     <div class="findMembersContainer">
         <div class="row">
             <h1 class="center-align">Find Members</h1>
@@ -119,6 +133,7 @@
     </div>
 <script src="../js/jquery-3.2.1.min.js"></script>
 <script src="../js/materialize.min.js"></script>
+
 <script src="../js/script.js"></script>
 </body>
 </html>
