search Members made functional@

--- a/templates/findMembers.html
+++ b/templates/findMembers.html
@@ -114,9 +114,12 @@
         <div class="parent">
             <a class="waves-effect waes-lightv btn-large findBtn" style="{background-color: #4682B4}"
                onclick="findMembers()">Find</a>
+            <a class="waves-effect waes-lightv btn-large findBtn" style="{background-color: #4682B4}"
+               onclick="reset()">Reset</a>
         </div>
     </div>
-    <div class="nameList" style="display: none"></div>
+    <div class="nameList"></div>
+
 </div>
 <script src="../js/jquery-3.2.1.min.js"></script>
 <script src="../js/materialize.min.js"></script>
