--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ body {
     height: 100vh;
     width: 100vw;
     display: flex;
+    overflow-x: hidden;
 }
 
 .container {
@@ -52,10 +53,23 @@ td:hover {
     height: 80vh;
     overflow-y: auto;
     width: 30%;
+    display: none;
 
 }
 
 .available{
     background-color: green!important;
     color:white!important;
+}
+
+.searchBtn
+{
+    background-color: #4885ed;
+    left:45%;
+    margin-top: 20px;
+}
+
+.searchBtn:hover
+{
+    background-color: #4885ed;
 }
