--- a/templates/findMembers.html
+++ b/templates/findMembers.html
@@ -112,9 +112,9 @@
             </tbody>
         </table>
         <div class="parent">
-            <a class="waves-effect waes-lightv btn-large findBtn" style="{background-color: #4682B4}"
+            <a class="waves-effect waves-light btn-large findBtn" style="{background-color: #4682B4}"
                onclick="findMembers()">Find</a>
-            <a class="waves-effect waes-lightv btn-large findBtn" style="{background-color: #4682B4}"
+            <a class="waves-effect waves-light btn-large findBtn" style="{background-color: #4682B4}"
                onclick="reset()">Reset</a>
         </div>
     </div>
